bugfix: fixed invisible selection chip

--- a/src/components/buttons/SelectionChip.scss
+++ b/src/components/buttons/SelectionChip.scss
@@ -1,24 +1,25 @@
 .SelectionChip {
   //border: $lineThick white solid;
-  background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 2rem;
   margin-right: 1rem;
+  color: #4a5374;
 
   p {
     text-transform: uppercase;
     margin: 0;
-    color: #4a5374;
     font-size: .8rem;
     font-weight: bold;
     padding: .2rem 1rem .2rem 1rem;
-
   }
 
   &.is-active {
     background-color: white;
   }
 
+  &.is-inactive {
+    color: #fff8;
+  }
 }
